--- a/views/jobs/new.pug
+++ b/views/jobs/new.pug
@@ -9,9 +9,13 @@ block content
       label(for='title') 职位名称：
       input(type='text', name='title', id='title', class='o-fm-ctl' autofocus)
 
-    .o-fm-grp
+    .o-fm-grp.o-pt-mount
       label(for='address') 工作地点：
-      input(type='text', name='address', id='address', class='o-fm-ctl')
+      popup-tabs(
+        field-name='address'
+        field-class='o-fm-ctl'
+        v-bind:init-lables='initLables'
+        v-bind:init-items='initItems')
 
     .o-fm-grp
       label(for='salary') 薪资：
