--- a/views/questions/new.pug
+++ b/views/questions/new.pug
@@ -30,7 +30,10 @@ block content
 
       .o-fm-grp.o-rat-mount
         label(for='level') 难度：
-        fa-rating(field-name='level' v-bind:initial-value='[0,1,2,3,4]')
+        fa-rating(
+          field-name='level'
+          v-bind:all-values="['0','1','2','3','4']"
+          v-bind:root-style="{ 'margin-top': '0.5rem', 'font-size': '1.5rem' }")
 
       .o-fm-grp
         label(for='content') 题目内容：
