--- a/assets/sass/partials/common/_form.scss
+++ b/assets/sass/partials/common/_form.scss
@@ -90,7 +90,7 @@ textarea.o-fm-ctl {
 }
 
 // make ckeditor textarea have a top margin as other form control
-.js-rich-editor { margin-top: 0.5em; }
+.u-rich-editor { margin-top: 0.5em; }
 
 // hint after a form control
 .o-fm-ctl-hint {
