--- a/views/answers/new.pug
+++ b/views/answers/new.pug
@@ -14,6 +14,6 @@ block content
     input(type='hidden' name='_question' value=question.id)
     input(type='hidden' name='_user' value=currentUser.id)
     input(type='hidden' name='_job' value=question._job.id)
-    textarea(name='content' id='content' class='js-rich-editor')
+    textarea(name='content' id='content' class='u-rich-editor')
     .c-answer-fm-submit
       input.o-btn.o-btn-primary.u-fir-span(type='submit' value='提 交')
