--- a/views/jobs/new.pug
+++ b/views/jobs/new.pug
@@ -33,11 +33,11 @@ block content
 
     .o-fm-grp
       label(for='duty') 职责：
-      textarea(name='duty', id='duty', class='js-rich-editor')
+      textarea(name='duty', id='duty', class='u-rich-editor')
 
     .o-fm-grp
       label(for='requirement') 要求：
-      textarea(name='requirement', id='requirement', class='js-rich-editor')
+      textarea(name='requirement', id='requirement', class='u-rich-editor')
 
     .o-fm-grp
       label(for='notes') 备注：
