--- a/views/questions/edit.pug
+++ b/views/questions/edit.pug
@@ -39,7 +39,7 @@ block content
 
       .o-fm-grp
         label(for='content') 题目内容：
-        textarea(name='content', id='content' class='js-rich-editor')= question.content
+        textarea(name='content', id='content' class='u-rich-editor')= question.content
 
       .o-fm-grp.text-center
         input(type='submit', value='保 存' class='o-btn o-btn-primary')
