--- a/views/user/_company_signup_detail.pug
+++ b/views/user/_company_signup_detail.pug
@@ -28,4 +28,4 @@
 
 .o-fm-grp
   label(for='desc') 介绍：
-  textarea(name='desc', id='desc', class='js-rich-editor')
+  textarea(name='desc', id='desc', class='u-rich-editor')
