--- a/views/user/_student_signup_detail.pug
+++ b/views/user/_student_signup_detail.pug
@@ -22,13 +22,13 @@ script.
 
 .o-fm-grp
   label(for='careerPlan') 职业规划：
-  textarea(name='careerPlan', id='careerPlan', class='js-rich-editor')
+  textarea(name='careerPlan', id='careerPlan', class='u-rich-editor')
   .o-fm-ctl-hint.
     职业规划有助于企业更加了解你，也是自己对未来职业的一个规划。简单来说就是你毕业之后想做什么，有什么目标，具体的行动计划等等
 
 .o-fm-grp
   label(for='zuopin') 课外作品：
-  textarea(name='zuopin', id='zuopin', class='js-rich-editor')
+  textarea(name='zuopin', id='zuopin', class='u-rich-editor')
   .o-fm-ctl-hint.
     课外作品是大学时期很重要的实践活动，也是很重要的加分项，建议去做并写上
     可以提供简单描述及相关的链接，让公司可以通过链接查看详细说明，如：<br/>
