--- a/views/jobs/edit.pug
+++ b/views/jobs/edit.pug
@@ -34,11 +34,11 @@ block content
 
     .o-fm-grp
       label(for='duty') 职责：
-      textarea(name='duty', id='duty', class='js-rich-editor')= job.duty
+      textarea(name='duty', id='duty', class='u-rich-editor')= job.duty
 
     .o-fm-grp
       label(for='requirement') 要求：
-      textarea(name='requirement', id='requirement', class='js-rich-editor')= job.requirement
+      textarea(name='requirement', id='requirement', class='u-rich-editor')= job.requirement
 
     .o-fm-grp
       label(for='notes') 备注：
