--- a/views/questions/new.pug
+++ b/views/questions/new.pug
@@ -37,7 +37,7 @@ block content
 
       .o-fm-grp
         label(for='content') 题目内容：
-        textarea(name='content', id='content' class='js-rich-editor')
+        textarea(name='content', id='content' class='u-rich-editor')
 
       .o-fm-grp.u-center-text
         input(type='submit', value='保 存' class='o-btn o-btn-primary')
