--- a/views/home/_welcome_signup.pug
+++ b/views/home/_welcome_signup.pug
@@ -4,7 +4,7 @@
     h3 通过问答，在企业和学生之间建立能力评估模型
     h3 不做象牙塔里的学霸，解决问题才是王道
 
-  form(method='post', action='/signup_step1' class='c-home-welcome__signup js-home-signup-form')
+  form-validator(method='post', action='/signup_step1' class='c-home-welcome__signup' v-bind='$data')
     input(type='hidden', name='step', value='1')
 
     .o-fm-grp
