--- a/views/user/loginView.pug
+++ b/views/user/loginView.pug
@@ -1,4 +1,8 @@
-extends _layout.pug
+extends ../layouts/main
+append js
+  script(src=assetHashPath('user/login.js'))
+append css
+  link(href=assetHashPath("user/login.css"), rel="stylesheet")
 block content
   .c-login-box
     if flashErrors && flashErrors.length
