--- a/views/user/passwordReset.pug
+++ b/views/user/passwordReset.pug
@@ -1,4 +1,8 @@
-extends _layout.pug
+extends ../layouts/main
+append js
+  script(src=assetHashPath('user/password_reset.js'))
+append css
+  link(href=assetHashPath("user/password_reset.css"), rel="stylesheet")
 block content
   .c-pwd-reset
     if step < 4
