--- a/views/jobs/index.pug
+++ b/views/jobs/index.pug
@@ -16,7 +16,7 @@ block content
         select(name='business' id='business' class='o-fm-ctl-hr')
           option(value='' selected) 请选择
           each b in businesses
-            option(value=b selected=b == business)= b 
+            option(value=b selected=b === business)= b
 
     .c-jobs-search-fm__field-grp.o-pt-mount
       span.c-jobs-search-fm__field.u-fir-span
