--- a/views/jobs/show.pug
+++ b/views/jobs/show.pug
@@ -40,14 +40,14 @@ block content
           button(class='o-btn o-btn-primary js-to-apply' data-job-id=job.id) 申 请
 
       else
-        if currentUser.type == 0
+        if currentUser.type === 0
           //- 学生浏览
           if applyStatus
             //- 学生已申请
             .u-bold-text
-              if applyStatus.status == 0
+              if applyStatus.status === 0
                 span.u-unknown-result 已申请，审核中...
-              else if applyStatus.status == 1
+              else if applyStatus.status === 1
                 span.u-error-result 企业已拒绝你的申请：#{applyStatus.message}
               else
                 span.u-success-result 申请已通过：#{applyStatus.message}
