--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -8,7 +8,7 @@ html(lang='zh')
     meta(name="description" content=seo && seo.description || '实习网专注于大学在校及毕业生学习及实习岗位')
 
     block css
-      link(href=assetHashPath("vendor.css"), rel="stylesheet")
+      link(href=assetHashPath("common.css"), rel="stylesheet")
   body
     header.c-header
       main-nav
@@ -20,3 +20,4 @@ html(lang='zh')
     block js
       script(src=assetHashPath('manifest.js'))
       script(src=assetHashPath('vendor.js'))
+      script(src=assetHashPath('common.js'))
