--- a/assets/sass/partials/common/_index.scss
+++ b/assets/sass/partials/common/_index.scss
@@ -8,4 +8,4 @@
 @import 'util';
 @import '../modules/footer';
 @import 'form';
-@import '../../vendor/font-awesome/font-awesome'
+@import '../../vendor/font-awesome/font-awesome';
