--- a/assets/sass/partials/common/_base.scss
+++ b/assets/sass/partials/common/_base.scss
@@ -12,7 +12,8 @@
 * { box-sizing: border-box; }
 
 body {
-  font-size: 100%;
+  font-size: 14px;
+  color: #333333;
   font-family: Helvetica, Tahoma, Arial,
                STXihei, "华文细黑", "Microsoft YaHei", "微软雅黑",
                SimSun, "宋体", sans-serif;
