add qq and github oauth

--- a/views/user/loginView.pug
+++ b/views/user/loginView.pug
@@ -25,4 +25,5 @@ block content
         span.c-login-box__oauth
           span.other-style 其他登录方式：
           span: a(href="/login/by/github"): i(class="fa fa-github fa-2x" aria-hidden="true")
+          span: a(href="/login/by/qq"): i(class="fa fa-qq fa-2x" aria-hidden="true")
 
